[package]
name = "just_emd"
version = "0.1.0"
edition = "2021"

license = "MIT"
readme = "README.md"
repository = "https://www.github.com/cpitsch/just-emd"

description = "A wrapper around the C++ code for the Earth Mover's Distance used in Python Optimal Transport."
keywords = ["emd", "wasserstein", "optimal-transport"]
categories = ["science", "mathematics", "algorithms", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.16.1"
thiserror = "1.0.64"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.1.30"
